[FIX] muk_web_theme: main menu align

--- a/muk_web_theme/static/src/scss/apps.scss
+++ b/muk_web_theme/static/src/scss/apps.scss
@@ -33,7 +33,7 @@
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
-		justify-content: flex-start;
+		justify-content: center;
 		@include media-breakpoint-up(lg) {
 		    padding: {
 		        left: 20vw;
